# DroneUpdated

./: 2a client chatgpt as it is  2a server chatgpt modified  CMakeLists.txt  GetWaypoints.srv  NavToWaypoint.action  package.xml  pico_client.py  pico_controller.py  pico_server.py  warehouse_service.py  waypoint_service.py
mav_comm/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh  colcon_command_prefix_build.sh.env  install_manifest.txt
mav_comm/ament_cmake_core/: mav_commConfig-version.cmake  mav_commConfig.cmake  package.cmake
mav_comm/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
mav_comm/ament_cmake_index/share/ament_index/resource_index/package_run_dependencies/: mav_comm
mav_comm/ament_cmake_index/share/ament_index/resource_index/parent_prefix_path/: mav_comm
mav_comm/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
p/mav_comm/mav_msgs/: CMakeLists.txt
p/mav_comm/mav_msgs/include/mav_msgs/: common.hpp  eigen_mav_msgs.hpp
p/mav_comm/mav_planning_msgs/: CMakeLists.txt
p/mav_comm/mav_planning_msgs/include/mav_planning_msgs/: eigen_planning_msgs.hpp
p/pid_tune/: README.md
p/pid_tune/pid_msg/: CMakeLists.txt  package.xml
p/pid_tune/pid_msg/msg/: PIDError.msg  PIDTune.msg
p/pid_tune/pid_tune/: CMakeLists.txt  package.xml
p/pid_tune/pid_tune/launch/: pid_tune_diff.launch.py  pid_tune_drone.launch.py
p/pid_tune/pid_tune/scripts/: pid_tune_differential.py  pid_tune_drone_button_ui.py  pid_tune_drone_slider_ui.py  pid_values.yaml
p/rotors_simulator/: README.md
p/rotors_simulator/rotors_control/: CMakeLists.txt  package.xml
p/rotors_simulator/rotors_control/include/rotors_control/: common.hpp  parameters.hpp  parameters_ros.hpp  roll_pitch_yawrate_thrust_controller.hpp
p/rotors_simulator/rotors_control/src/nodes/: roll_pitch_yawrate_thrust_controller_node.cpp  roll_pitch_yawrate_thrust_controller_node.hpp
p/rotors_simulator/rotors_swift_description/: CMakeLists.txt  package.xml
p/rotors_simulator/rotors_swift_gazebo/: CMakeLists.txt  package.xml
p/rotors_simulator/rotors_swift_gazebo/launch/: swift_pico_simulation.launch.py
p/rotors_simulator/rotors_swift_gazebo/resource/: roll_pitch_yawrate_thrust_controller_swift.yaml  swift.yaml
p/rotors_simulator/rotors_swift_gazebo/worlds/: swift_pico_world.sdf
p/rotors_simulator/rotors_swift_interface/: CMakeLists.txt  package.xml
p/rotors_simulator/rotors_swift_interface/include/rotors_swift_interface/: swift_trans.hpp
p/rotors_simulator/rotors_swift_interface/src/: swift_trans.cpp
p/rotors_simulator/swift_msgs/: CMakeLists.txt  package.xml
p/rotors_simulator/swift_msgs/msg/: SwiftMsgs.msg
p/swift_pico/launch/: map_2b.launch.py
p/swift_pico/src/: pico_client.py  pico_server.py
p/swift_pico/worlds/: map_2b.sdf  warehouse_world.sdf
p/waypoint_navigation/: CMakeLists.txt  package.xml
p/waypoint_navigation/action/: NavToWaypoint.action
p/waypoint_navigation/srv/: GetWaypoints.srv
p/whycon/: CMakeLists.txt  README.md  package.xml
p/whycon/include/whycon/: circle_detector.hpp  localization_system.hpp  many_circle_detector.hpp
p/whycon/launch/: usb_cam_launch.py  whycon_only_launch.py  whycon_ros_launch.py
p/whycon/src/lib/: circle_detector.cpp  localization_system.cpp  many_circle_detector.cpp
p/whycon/src/ros2/: whycon_node.cpp  whycon_ros.cpp  whycon_ros.hpp
